Moving Conway's Game of Life into Games dir. Deleting Projects dir.

--- a/games.html
+++ b/games.html
@@ -22,8 +22,9 @@
 	<div style="width:280px; margin:auto;">
 	<section id="content">
 	
-	<h2>Games</h2>
+	<h2>Clones</h2>
 	<ul>
+		<li><a href="games/conway.html">Conway's Game of Life</a></li>
 		<li><a href="games/pong.html">Pong</a></li>
 		<!--<li><a href="games/canasta.html">Canasta</a></li>-->
 	</ul>
