--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<a href="https://dl.dropbox.com/u/4841094/John%20Berberich%20-%20Software%20Engineer.pdf">
 		résumé</a>, connect with me on
 		<a href="https://www.linkedin.com/in/johnberberich">LinkedIn</a>, and check
-		out some <a href="projects/index.html">projects</a> I've been working
+		out some <a href="projects.html">projects</a> I've been working
 		on (just one right now).
 		<p>If you want to talk, feel free to contact me via
 		<a href="mailto:jberberich@gmail.com">email</a> or
