Fixed oldPos ball updating problem.

--- a/games/pong.html
+++ b/games/pong.html
@@ -30,7 +30,7 @@
 
 		function Ball() {
 			this.pos = { 'x': 100, 'y': 100 };
-			this.oldPos = this.pos;
+			this.oldPos = { 'x': 100, 'y': 100 };
 			this.size = 8;
 			this.velocity = { 'x': 5.0, 'y': 3.0 };
 		}
