Convert to Jekyll.

--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Contact - John Berberich</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<meta name="description" content="">
-	<link rel="stylesheet" href="css/normalize.css" type="text/css">
-	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-</head>
-<body>
-	<header id="masthead">
-		<h1><a href="index.html">John Berberich</a></h1>
-		<nav id="main-nav">
-			<ul>
-				<li><a href="about.html">About</a></li>
-				<li><a href="games.html">Games</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div style="width:280px; margin:auto;">
-	<section id="content">
-	
-	<h2>Contact me</h2>
+---
+layout: default
+title: Contact | johnberberich.com
+---
 
-	</section>
-	
-	<footer>
-		<p id="copyright">Copyright &copy; 2013 John Berberich</p>
-	</footer>
-
-	</div>
-
-	<script type="text/javascript">
-	var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
-	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-	s.parentNode.insertBefore(g,s)}(document,'script'));
-</script>
-</body>
-</html>
+<h2>Contact me</h2>
