--- a/games/conway.html
+++ b/games/conway.html
@@ -32,7 +32,7 @@
 	<div id="controls">
 		<button type="button" onclick="clearDemo();">Clear</button>
 		<button type="button" onclick="randomizeDemo();">Randomize</button>
-		<button type="button" onclick="simulate();">Conway</button>
+		<button type="button" onclick="simulate();">Iterate</button>
 		<!--button type="button" onclick="countShapes();">Count</button-->
 	</div>
 
