--- a/games/pong.html
+++ b/games/pong.html
@@ -13,10 +13,29 @@
 		</div>
 	</noscript>
 
+	<header>
+		<h1>Pong</h1>
+	</header>
+	
 	<canvas id="canvas" width="320" height="240">
 		You need a modern browser and Javascript enabled to play Pong.
 	</canvas>
-	
+
+	<section>
+		Welcome to my Pong clone! It uses JavaScript and HTML5 Canvas.
+		<h2>Controls (up and down):</h2>
+		<ul>
+			<li>Player 1: A and Z</li>
+			<li>Player 2: K and M</li>
+		</ul>
+		<h2>Todo:</h2>
+		<ol>
+			<li>Collision detection</li>
+			<li>Scoring</li>
+			<li>More...</li>
+		</ol>
+	</section>
+
 	<script>
 		function Player(name, keyState) {
 			this.name = name;
