Minor homepage text changes.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@ title: johnberberich.com
 		in <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
 			<span itemprop="locality">Cincinnati</span>,
 			<span itemprop="region">Ohio</span></span>.
-		I spend most of my free time writing video games (and playing them,
-		of course), but when I'm not, I enjoy running outdoors, scuba diving,
-		learning languages, and traveling.
+		I spend most of my time writing code, but I also love playing video
+		games, running outdoors, scuba diving, and traveling.
 	</p>
 	<p>While you're here, check out some
 	<a href="games.html">games</a> I've been working on
