Added bootstrap3 and font-awesome.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: johnberberich.com
 ---
 <p class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
-	I am <span itemprop="name">John Berberich</span>
-	and I am a <span itemprop="title">programmer</span>
+	Hello, I'm <span itemprop="name">John</span>
+	and I am a <span itemprop="title">software engineer</span>
 	in <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
 		<span itemprop="locality">Cincinnati</span>,
 		<span itemprop="region">Ohio</span></span>.
