Add 1- and 2-col layout. Add text to About page.

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
-layout: default
-title: About | johnberberich.com
+layout: one
+title: About
 ---
-
 <h2>About me</h2>
+<p>I started programming in elementary school upon realizing I could create my own games -- my first was a top-down maze on the TI-82 calculator written in TI-BASIC -- and after learning Pascal in high school Computer Science, I knew I wanted a career in software.</p>
+<p>Though I didn't wind up making video games, I'm lucky to have had the opportunity to contribute to a wide variety of interesting projects for a diverse set of companies and industries. I'm particularly fond of ASP.NET MVC and maintain a hobbyist's interest in game development and Python, but the primary focus during my ten years as developer has been on C# and the Microsoft .NET web stack, ranging from one-off ASP.NET apps to <a href="http://www.kroger.com">Internet</a> <a href="http://www.fredmeyer.com">sites</a> <a href="http://www.smithsfoodanddrug.com">running</a> <a href="http://www.ralphs.com">on</a> <a href="http://www.qfc.com">SharePoint</a>.</p>
