--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: johnberberich.com
+layout: two
+title: Home
 ---
 <p>While you're here, check out some
 <a href="games.html">games</a> I've been working on
