--- a/projects.html
+++ b/projects.html
@@ -1,45 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Projects - John Berberich</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<meta name="description" content="">
-	<link rel="stylesheet" href="css/normalize.css" type="text/css">
-	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-</head>
-<body>
-	<header id="masthead">
-		<h1><a href="index.html">John Berberich</a></h1>
-		<nav id="main-nav">
-			<ul>
-				<li><a href="about.html">About</a></li>
-				<li><a href="games.html">Games</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div style="width:280px; margin:auto;">
-	<section id="content">
-	
-	<h2>Projects</h2>
-	<ul>
-		<li><a href="projects/grid.html">Conway's Game of Life and more grid fun</a></li>
-	</ul>
-
-	</section>
-	
-	<footer>
-		<p id="copyright">Copyright &copy; 2013 John Berberich</p>
-	</footer>
-
-	</div>
-
-	<script type="text/javascript">
-	var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
-	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-	s.parentNode.insertBefore(g,s)}(document,'script'));
-</script>
-</body>
-</html>
+---
+layout: two
+title: Projects
+---
+<h2>Game Clones</h2>
+<ul>
+	<li><a href="games/conway.html">Conway's Game of Life</a></li>
+	<li><a href="games/pong.html">Pong</a></li>
+</ul>
