--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 ---
-layout: two
-title: Home
+layout: default
+title: johnberberich.com
 ---
-<p>While you're here, check out some
-<a href="games.html">games</a> I've been working on
-and download a copy of my
-<a href="https://dl.dropbox.com/u/4841094/John%20Berberich%20-%20Software%20Engineer.pdf">resume</a>.
-<p>If you want to talk, feel free to contact me via
-<a href="mailto:jberberich@gmail.com">email</a> or
-<a href="https://twitter.com/johnberberich">Twitter</a>,
-and if you already know me, connect with me on
-<a href="https://www.linkedin.com/in/johnberberich">LinkedIn</a>.</p>
+<h1 class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
+    Hi, my name is <strong itemprop="name">John Berberich</strong>, and I'm a <span itemprop="jobTitle">Software Engineer</span>.
+</h1>
+<h2>
+    <ul class="nav nav-pills">
+        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
+        <li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
+        <li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
+    </ul>
+</h2>
+<p>While you're here, check out some <a href="projects.html">projects</a> I've
+been working on. If you're interested in hiring me, check out my
+<a href="https://docs.google.com/document/d/1YYeRlLDdsfNOhirqGD-WhPkeoqtQcaeBQUi4hnNolnU/pub">resume</a>.</p>
