--- a/about.html
+++ b/about.html
@@ -3,5 +3,12 @@ layout: one
 title: About
 ---
 <h2>About me</h2>
-<p>I started programming in elementary school upon realizing I could create my own games -- my first was a top-down maze on the TI-82 calculator written in TI-BASIC -- and after learning Pascal in high school Computer Science, I knew I wanted a career in software.</p>
-<p>Though I didn't wind up making video games, I'm lucky to have had the opportunity to contribute to a wide variety of interesting projects for a diverse set of companies and industries. I'm particularly fond of ASP.NET MVC and maintain a hobbyist's interest in game development and Python, but the primary focus during my ten years as developer has been on C# and the Microsoft .NET web stack, ranging from one-off ASP.NET apps to <a href="http://www.kroger.com">Internet</a> <a href="http://www.fredmeyer.com">sites</a> <a href="http://www.smithsfoodanddrug.com">running</a> <a href="http://www.ralphs.com">on</a> <a href="http://www.qfc.com">SharePoint</a>.</p>
+<p>
+    I began programming when I realized I could create my own games (the first was a top-down maze on my TI-82), and after learning Pascal in high school, I wanted a career writing software.
+</p>
+<p>
+    I've been able to contribute to a wide variety of interesting projects in a diverse set of industries. The latest had me learning PHP and Symfony 2 on the fly to create a report-building site from the groud up. Prior to that, my focus was on C# and the Microsoft .NET web stack, working on one-off ASP.NET apps to Internet sites running on SharePoint.
+</p>
+<p>
+    At home, I'm rather fond of Python and use it on my side projects, and I still maintain an interest in game development, particularly in HTML5 and canvas.
+</p>
