--- a/index.html
+++ b/index.html
@@ -1,18 +1,55 @@
----
-layout: default
-title: johnberberich.com
----
-<h1 class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
-    Hi, my name is <strong itemprop="name">John Berberich</strong>, and I'm a <span itemprop="jobTitle">Software Engineer</span>.
-</h1>
-<h2>
-    <ul class="nav nav-pills">
-        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-        <li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
-        <li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
-        <li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
-    </ul>
-</h2>
-<p>While you're here, check out some <a href="projects.html">projects</a> I've
-been working on. If you're interested in hiring me, check out my
-<a href="https://docs.google.com/document/d/1YYeRlLDdsfNOhirqGD-WhPkeoqtQcaeBQUi4hnNolnU/pub">resume</a>.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" />
+    <meta name="google-site-verification" content="oTmLIeNN96Rw9Xv70CTpsVzkQJMCuTqe3GllV01s-5A" />
+    <title>johnberberich.com</title>
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+    <div class="wrap">
+        <div class="container">
+            <div class="row">
+                <h1 class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
+                    Hi, my name is <strong itemprop="name">John Berberich</strong>, and I'm a <span itemprop="jobTitle">Software Engineer</span>.
+                </h1>
+                <h2>
+                    <ul class="nav nav-pills">
+                        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                        <li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
+                        <li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
+                        <li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
+                    </ul>
+                </h2>
+                <p>While you're here, check out some <a href="projects.html">projects</a> I've
+                been working on. If you're interested in hiring me, check out my
+                <a href="https://docs.google.com/document/d/1YYeRlLDdsfNOhirqGD-WhPkeoqtQcaeBQUi4hnNolnU/pub">resume</a>.</p>
+            </div>
+        </div>
+    </div>
+
+    <footer id="footer">
+        <div class="container">
+            <p id="copyright" class="text-muted">Copyright &copy; 2014 John Berberich</p>
+        </div>
+    </footer>
+
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
+</body>
+</html>
