--- a/index.html
+++ b/index.html
@@ -18,28 +18,39 @@
 <body>
     <div class="wrap">
         <div class="container">
-            <div class="row">
-                <h1 class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
-                    Hi, my name is <strong itemprop="name">John Berberich</strong>, and I'm a <span itemprop="jobTitle">Software Engineer</span>.
-                </h1>
-                <h2>
-                    <ul class="nav nav-pills">
-                        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                        <li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
-                        <li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
-                        <li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
-                    </ul>
-                </h2>
+            <section class="row">
+                <header>
+                    <h1 class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
+                        Hi, my name is <strong itemprop="name">John Berberich</strong>, and I'm a <span itemprop="jobTitle">web developer</span>.
+                    </h1>
+                    <h2>
+                        <ul class="nav nav-pills">
+                            <li><a href="mailto:jberberich@gmail.com"><i class="fa fa-envelope"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
+                        </ul>
+                    </h2>
+                </header>
                 <p>While you're here, check out some <a href="projects.html">projects</a> I've
                 been working on. If you're interested in hiring me, check out my
                 <a href="https://docs.google.com/document/d/1YYeRlLDdsfNOhirqGD-WhPkeoqtQcaeBQUi4hnNolnU/pub">resume</a>.</p>
-            </div>
+            </section>
+            <section class="row">
+                <header>
+                    <h3>Game Clones</h3>
+                    <ul>
+                        <li><a href="games/conway.html">Conway's Game of Life</a></li>
+                        <li><a href="games/pong.html">Pong</a></li>
+                    </ul>
+                </header>
+            </section>
         </div>
     </div>
 
     <footer id="footer">
         <div class="container">
-            <p id="copyright" class="text-muted">Copyright &copy; 2014 John Berberich</p>
+            <p id="copyright" class="text-muted">Copyright &copy; 2014 <a href="mailto:jberberich@gmail.com">John Berberich</a></p>
         </div>
     </footer>
 
