--- a/index.html
+++ b/index.html
@@ -18,33 +18,39 @@
 <body>
     <div class="wrap">
         <div class="container">
-            <section class="row">
-                <header>
-                    <h1 class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
-                        Hi, my name is <strong itemprop="name">John Berberich</strong>, and I'm a <span itemprop="jobTitle">web developer</span>.
-                    </h1>
-                    <h2>
-                        <ul class="nav nav-pills">
-                            <li><a href="mailto:jberberich@gmail.com"><i class="fa fa-envelope"></i></a></li>
-                            <li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
-                            <li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
+            <div class="row">
+                <div class="col-md-3">
+                    <p>
+                        <img src="img/avatar.png" width="180" height="180" />
+                    </p>
+                    <p class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
+                        My name is <strong itemprop="name">John Berberich</strong> and I'm a <span itemprop="jobTitle">web developer</span>.
+                    </p>
+                    <p>I am a consultant. Hire me.</p>
+                    <p>
+                        <ul class="socials">
+                            <li><a href="mailto:jberberich@gmail.com" title="Email"><i class="fa fa-envelope"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/johnberberich" title="John Berberich on LinkedIn"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://twitter.com/johnberberich" title="johnberberich on Twitter"><i class="fa fa-twitter-square"></i></a></li>
+                            <li><a href="https://github.com/johnberberich" title="johnberberich on GitHub"><i class="fa fa-github-square"></i></a></li>
+                            <li><a href="https://pinboard.in/u:jberberich" title="jberberich on Pinboard">Pinboard</a></li>
                         </ul>
-                    </h2>
-                </header>
-                <p>While you're here, check out some <a href="projects.html">projects</a> I've
-                been working on. If you're interested in hiring me, check out my
-                <a href="https://docs.google.com/document/d/1YYeRlLDdsfNOhirqGD-WhPkeoqtQcaeBQUi4hnNolnU/pub">resume</a>.</p>
-            </section>
-            <section class="row">
-                <header>
-                    <h3>Game Clones</h3>
-                    <ul>
-                        <li><a href="games/conway.html">Conway's Game of Life</a></li>
-                        <li><a href="games/pong.html">Pong</a></li>
-                    </ul>
-                </header>
-            </section>
+                    </p>
+                </div>
+                <div class="col-md-9">
+                    <heading><h1>johnberberich.com</h1></heading>
+                    <p>
+                        <a href="https://docs.google.com/document/d/1YYeRlLDdsfNOhirqGD-WhPkeoqtQcaeBQUi4hnNolnU/pub">Résumé</a></p>
+                    </p>
+                    <section>
+                        <h3>Game Clones</h3>
+                        <ul>
+                            <li><a href="games/conway.html">Conway's Game of Life</a></li>
+                            <li><a href="games/pong.html">Pong</a></li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
         </div>
     </div>
 
