convert to template from holman/left

--- a/index.html
+++ b/index.html
@@ -1,72 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="google-site-verification" content="oTmLIeNN96Rw9Xv70CTpsVzkQJMCuTqe3GllV01s-5A" />
-    <title>johnberberich.com</title>
-    <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-<body>
-    <div class="wrap">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <p>
-                        <img src="img/avatar.png" width="180" height="180" />
-                    </p>
-                    <p class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
-                        My name is <strong itemprop="name">John Berberich</strong> and I'm a <span itemprop="jobTitle">web developer</span>.
-                    </p>
-                    <p>I am a consultant. Hire me.</p>
-                    <p>
-                        <ul class="socials">
-                            <li><a href="mailto:jberberich@gmail.com" title="Email"><i class="fa fa-envelope"></i></a></li>
-                            <li><a href="http://www.linkedin.com/in/johnberberich" title="John Berberich on LinkedIn"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://twitter.com/johnberberich" title="johnberberich on Twitter"><i class="fa fa-twitter-square"></i></a></li>
-                            <li><a href="https://github.com/johnberberich" title="johnberberich on GitHub"><i class="fa fa-github-square"></i></a></li>
-                            <li><a href="https://pinboard.in/u:jberberich" title="jberberich on Pinboard">Pinboard</a></li>
-                        </ul>
-                    </p>
-                </div>
-                <div class="col-md-9">
-                    <heading><h1>johnberberich.com</h1></heading>
-                    <p>
-                        <a href="https://docs.google.com/document/d/1YYeRlLDdsfNOhirqGD-WhPkeoqtQcaeBQUi4hnNolnU/pub">Résumé</a></p>
-                    </p>
-                    <section>
-                        <h3>Game Clones</h3>
-                        <ul>
-                            <li><a href="games/conway.html">Conway's Game of Life</a></li>
-                            <li><a href="games/pong.html">Pong</a></li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-        </div>
-    </div>
+---
+layout: layout
+---
 
-    <footer id="footer">
-        <div class="container">
-            <p id="copyright" class="text-muted">Copyright &copy; 2014 <a href="mailto:jberberich@gmail.com">John Berberich</a></p>
-        </div>
-    </footer>
-
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
-</body>
-</html>
+<section class="content">
+  <h1>{{ site.name }}</h1>
+  <p>
+      I began programming when I realized I could create my own games (the first was a top-down maze on my TI-82), and after learning Pascal in high school, I wanted a career writing software.
+  </p>
+  <p>
+      I've been able to contribute to a wide variety of interesting projects in a diverse set of industries. The latest had me learning PHP and Symfony 2 on the fly to create a report-building site from the groud up. Prior to that, my focus was on C# and the Microsoft .NET web stack, working on one-off ASP.NET apps to Internet sites running on SharePoint.
+  </p>
+  <p>
+      At home, I'm rather fond of Python and use it on my side projects, and I still maintain an interest in game development, particularly in HTML5 and canvas.
+  </p>
+</section>
