--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 ---
-layout: layout
+layout: two
 ---
 
-<section class="content">
-  <h1>{{ site.name }}</h1>
-  <p>
-      I began programming when I realized I could create my own games (the first was a top-down maze on my TI-82), and after learning Pascal in high school, I wanted a career writing software.
-  </p>
-  <p>
-      I've been able to contribute to a wide variety of interesting projects in a diverse set of industries. The latest had me learning PHP and Symfony 2 on the fly to create a report-building site from the groud up. Prior to that, my focus was on C# and the Microsoft .NET web stack, working on one-off ASP.NET apps to Internet sites running on SharePoint.
-  </p>
-  <p>
-      At home, I'm rather fond of Python and use it on my side projects, and I still maintain an interest in game development, particularly in HTML5 and canvas.
-  </p>
-</section>
+<h1>I started programming when I realized I could make my own games...</h1>
+<p>
+    ...my first was a top-down maze crawler for the TI-82. After learning Pascal in my high school's Computer Science classes, I knew I wanted to write software for a living.
+</p>
+<p>
+    During the past ten years, I've worked on a wide variety of interesting projects for a diverse set of companies. My last project had me learning PHP and Symfony 2 while I created a reporting site from scratch for an education non-profit. Before that, my focus was on C# and the .NET web stack, working on one-off ASP.NET apps to Internet sites running on SharePoint.
+</p>
+<p>
+    At home, I'm rather fond of Python and use it on my side projects, and I still maintain an interest in game development, particularly in HTML5 and canvas.
+</p>
