--- a/404.html
+++ b/404.html
@@ -1,9 +1,11 @@
 ---
-layout: layout
-title: "Not Found"
+layout: one
+title: "404: Page not found"
+permalink: 404.html
 ---
 
-<section class="content">
-  <h1>Not Found</h1>
-  <p>Sorry! Couldn't find that page.</p>
-</section>
+<h1>404: Page not found</h1>
+<p>
+    Sorry, I've misplaced that URL or it's pointing to something that doesn't exist.
+    <a href="{{ site.baseurl }}">Head back home</a> to try finding it again.
+</p>
