--- a/resume.html
+++ b/resume.html
@@ -3,19 +3,24 @@ layout: one
 title:  Résumé
 ---
 
-<h1>John Berberich</h1>
-<h2>Software Engineer</h2>
+{% assign resume = site.data.resume %}
 
-<section id="bio">
-  <h3>Bio</h3>
-</section>
+<h1>{{ resume.name }}</h1>
+<h2>{{ resume.label }}</h2>
 
-<section id="summary">
-  <h3>Summary &amp; Objective</h3>
+<nav>
+  <ul>
+    <li><a href="#biography"><i class="fa fa-user"></i> Biography</a></li>
+    <li><a href="#experience"><i class="fa fa-building"></i> Experience</a></li>
+    <li><a href="#education"><i class="fa fa-graduation-cap"></i> Education</a></li>
+  </ul>
+</nav>
+
+<section id="biography">
+  <h3>Biography</h3>
   <p>
     I am a full-stack, polyglot web developer with over ten years of experience programming, designing, and debugging software. On my recent projects, I've enjoyed learning PHP and Symfony2 on the fly, and I typically use Python on my personal projects The remainder of my professional work has been in C#.
   </p>
-
   <p>
     I'm seeking a senior role on a web development team where I can contribute code on both the front- and back-ends.
   </p>
@@ -24,54 +29,74 @@ title:  Résumé
 <section id="skills">
   <h3>Skills</h3>
   <ul>
-    <li>PHP</li>
-    <li>Symfony2</li>
-    <li>JavaScript</li>
-    <li>jQuery</li>
-    <li>Git</li>
-    <li>Python</li>
-    <li>C#</li>
-    <li>ASP.NET</li>
-    <li>SharePoint</li>
-    <li>HTML5</li>
-    <li>CSS</li>
+    <li>
+      Programming Languages
+      <ul>
+        <li>PHP</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>C#</li>
+      </ul>
+    </li>
+    <li>
+      Web Frameworks
+      <ul>
+        <li>Symfony 2</li>
+        <li>jQuery</li>
+        <li>ASP.NET</li>
+        <li>SharePoint</li>
+      </ul>
+    </li>
+    <li>
+      Tools
+      <ul>
+        <li>Git</li>
+        <li>Vagrant</li>
+        <li>Jenkins</li>
+        <li>Docker</li>
+      </ul>
+    </li>
   </ul>
 </section>
 
 <section id="experience">
   <h3>Experience</h3>
 
-KnowledgeWorks - Contract Software Engineer, 2013 - Present
-Rewrote a key HTML table of student grades in a learning management system to use jQuery DataTables and Twig, and refactored back-end code to be more maintainable and less coupled to Drupal.
-Wrote a report-building application in Symfony 2 that was designed to ease the production of reports for leaders of competency-based learning programs.
-Keywords: PHP, Symfony, JavaScript, jQuery, Drupal, MySQL, Linux, Git
-
-Kroger - Software Engineer, 2007 - 2012
-Implemented an ASP.NET base page to pull layout and content from SharePoint.
-Collaborated on the design and later maintained a SharePoint application that facilitated the sharing of content between distinct sites.
-Coordinated code releases, maintained VCS, and created deployment packages.
-Wrote a SharePoint timer job to synchronize video metadata from external content system.
-Wrote a PowerShell script to automate the creation and distribution of PFX certificates.
-Keywords: C#, ASP.NET, SharePoint, SQL Server, PowerShell
-
-FormShare - Software Developer, 2007 - 2007
-Worked in a small team to develop a BPA web application using ASP.NET.
-Built data communication and exchange services using .NET Web Services.
-Diagnosed and fixed performance problems in a dynamic form builder application written in ASP.NET.
-Keywords: C#, ASP.NET, JavaScript, SQL Server, Windows Services, Web Services
-
-Com-Net Software - Software Developer, 2005 - 2007
-Developed a touch-screen kiosk using WinForms.
-Wrote a flight tracking web site, email notification service, and data import service; and worked with the airport through design, testing, and implementation.
-Built a WinForms application for managing events in a hotel presentation application, and collaborated with team in the design of the flight, news, and weather data import services and product registration.
-Keywords: C#, WinForms, ASP, VBScript, SQL Server, XML, Web Services, Windows Services
-
-United Medical Resources - Sr. Programmer Analyst, 2002 - 2005
-Wrote an ASP web application used by health care managers to track high-risk patients and to follow their compliance through a managed health plan.
-Keywords: C#, VB6, ASP, VBScript, SQL Server, XML, Web Services
+  {% for job in resume.work %}
+  <section>
+    <header>
+      <h4>{{ job.company }} - {{ job.position }}</h4>
+      <h5>
+        {{ job.started_on | date: "%F" }}
+        -
+        {% if job.ended_on %}
+          {{ job.ended_on | date: "%F" }}
+        {% else %}
+          Present
+        {% endif %}
+      </h5>
+    </header>
+    Accomplishments
+    <ul>
+    {% for accomplishment in job.accomplishments %}
+      <li>{{ accomplishment }}</li>
+    {% endfor %}
+    </ul>
+    Technologies
+    <ul>
+    {% for tech in job.technologies %}
+      <li>{{ tech }}</li>
+    {% endfor %}
+    </ul>
+  </section>
+  {% endfor %}
 </section>
 
 <section id="education">
   <h3>Education</h3>
-  <p>B.S. Computer Science, Wright State University, 2002.</p>
+  <ul>
+  {% for e in resume.education %}
+    <li>{{ e.degree }}, {{ e.school }}, {{ e.graduated_on }}.</li>
+  {% endfor %}
+  </ul>
 </section>
